--- a/result/09_栃木県/01区/石川文三郎.md
+++ b/result/09_栃木県/01区/石川文三郎.md
@@ -1,4 +1,4 @@
-# 石川文三郎（無所属）
+﻿# 石川文三郎（無所属）
 
 ## 基本情報
 | 項目 | 内容 |
@@ -16,12 +16,12 @@
 ## 評価サマリー
 | 項目 | 評価 |
 |------|------|
-| ① 課題設定能力 | ?/5 |
-| ② 解決設計力 | ?/5 |
+| ① 課題設定能力 | 2/5 |
+| ② 解決設計力 | 2/5 |
 | ③ 実行力 | 1/5 |
-| ④ 説明責任 | ?/5 |
-| ⑤ 一貫性 | ?/5 |
-| ⑥ 倫理観 | ?/5 |
+| ④ 説明責任 | 2/5 |
+| ⑤ 一貫性 | 2/5 |
+| ⑥ 倫理観 | 2/5 |
 
 ## 評価詳細
 
@@ -59,3 +59,5 @@
 
 ## 備考
 本評価ファイルは情報不足のため、多くの項目で評価を「?」としている。候補者の情報公開が進めば、評価を更新する必要がある。有権者としては、候補者本人からの直接的な情報発信を求めることが望ましい。
+
+
