--- a/result/13_東京都/18区/吉田綾.md
+++ b/result/13_東京都/18区/吉田綾.md
@@ -3,60 +3,76 @@
 ## 基本情報
 | 項目 | 内容 |
 |------|------|
-| 生年月日 | 不明 |
-| 年齢 | 不明 |
+| 生年月日 | 1985年頃 |
+| 年齢 | 40歳 |
 | 選挙区 | 東京18区（武蔵野市・小金井市・西東京市） |
 | 当選回数 | なし（新人） |
-| 主な役職 | 再生の道候補者 |
+| 主な役職 | 再生の道所属、元JETRO職員 |
 
 ## 経歴
-- 詳細な経歴は公表情報が限られている
-- 「再生の道」から東京18区に立候補予定
+- 茨城県出身
+- 上智大学外国語学部ロシア語学科卒業
+- 大学在学中、ロシア・サンクトペテルブルク国立大学に留学
+- 2009年4月、日本貿易振興機構（JETRO）入社
+- 外務省在外公館派遣員制度を利用し、在ロシア日本国大使館勤務
+- コーチングファーム勤務（組織風土変革、リーダーシップ開発）
+- 国際会議運営ベンチャー勤務
+- クライス＆カンパニー（人材紹介会社）勤務
+- 2025年5月、クライス＆カンパニー退職
+- 2025年、石丸伸二代表率いる「再生の道」に参加
+- 2025年7月、参議院選挙東京選挙区に出馬（128,746票獲得、落選）
+- 東京都西東京市在住
 
-※注: 2024年衆院選（第50回）では「再生の道」からの候補者の出馬は確認できず、次期衆院選（2026年）の候補者として記載されている可能性があります。
+※注: 2024年衆院選（第50回）では出馬しておらず、次期衆院選（2026年）東京18区の候補者として活動予定
 
 ## 評価サマリー
 
 | 項目 | 評価 |
 |------|------|
-| ① 課題設定能力 | 1/5 |
-| ② 解決設計力 | 1/5 |
-| ③ 実行力 | 1/5 |
-| ④ 説明責任 | 1/5 |
-| ⑤ 一貫性 | 1/5 |
-| ⑥ 倫理観 | 2/5 |
+| ① 課題設定能力 | 2/5 |
+| ② 解決設計力 | 3/5 |
+| ③ 実行力 | 2/5 |
+| ④ 説明責任 | 2/5 |
+| ⑤ 一貫性 | 2/5 |
+| ⑥ 倫理観 | 3/5 |
 
 ## 評価詳細
 
-### ① 課題設定能力: 1/5
-**評価根拠**: 公表されている政策情報がほとんどない。「再生の道」という政党の政策方針も詳細不明。
+### ① 課題設定能力: 2/5
+**評価根拠**: 再生の道の政策として「教育投資」を掲げる。JETRO・外務省での国際経験から、グローバルな視点での課題認識は持つ。ただし具体的な政策課題の設定は詳細不明。
 
-### ② 解決設計力: 1/5
-**評価根拠**: 経歴、専門分野についての情報が不足。政策設計能力は評価できない。
+### ② 解決設計力: 3/5
+**評価根拠**: 上智大学外国語学部卒、ロシア留学経験という高い学歴。JETRO・在ロシア大使館での国際経験。コーチングファームでの組織変革支援経験。ただし政策立案の直接経験はない。
 
-### ③ 実行力: 1/5
-**評価根拠**: 選挙での当選経験がなく、政治的実行力は評価できない段階。
+### ③ 実行力: 2/5
+**評価根拠**: 参院選東京選挙区で128,746票を獲得したが落選。再生の道としての都議選は全42人落選。新党での活動に限界あり。衆院選での当選経験はない。
 
-### ④ 説明責任: 1/5
-**評価根拠**: 公開されている活動情報がほとんどない。有権者への説明責任を果たす機会がこれから。
+### ④ 説明責任: 2/5
+**評価根拠**: 参院選での敗北後「結果は真摯に受け止める」と発言。政策説明の機会はまだ限られている段階。
 
-### ⑤ 一貫性: 1/5
-**評価根拠**: 政治活動の履歴が不明のため、一貫性の評価は不可能。
+### ⑤ 一貫性: 2/5
+**評価根拠**: 政治キャリアが2025年から始まったばかりで、一貫性の評価は困難。民間企業から政治への転身。再生の道での活動継続が期待される。
 
-### ⑥ 倫理観・権力の扱い方: 2/5
-**評価根拠**: 特に問題となるスキャンダルは報じられていない。情報不足のため評価困難。
+### ⑥ 倫理観・権力の扱い方: 3/5
+**評価根拠**: 特に問題となるスキャンダルは報じられていない。外務省・JETRO等での信頼性ある経歴。新人候補として清新なイメージ。
 
 ## 強み・弱み
 
 ### 強み
-- **新人の清新さ**: 既存政治への批判票を取り込める可能性
+- **国際経験**: ロシア留学、JETRO、在ロシア大使館勤務
+- **学歴**: 上智大外国語学部、サンクトペテルブルク大留学
+- **語学力**: ロシア語の専門知識
+- **民間経験**: コーチング、人材紹介などの実務経験
+- **参院選実績**: 128,746票獲得
 
 ### 弱み（注意点）
-- **情報不足**: 公開情報がほとんどない
-- **知名度ゼロ**: 有権者への浸透がこれから
-- **経験不足**: 政治・選挙経験なし
-- **党勢**: 「再生の道」の組織基盤が不明
-- **強敵**: 福田・松下という2人の有力候補
+- **政治経験なし**: 議会経験がない
+- **新党の限界**: 再生の道の組織基盤
+- **参院選落選**: 東京選挙区で敗北
+- **強敵**: 福田・松下という現職2名
+- **知名度**: 有権者への浸透がこれから
 
 ## 情報ソース
-- 東京都選挙管理委員会
+- [選挙ドットコム - 吉田綾](https://go2senkyo.com/seijika/196356)
+- [日本経済新聞 - 吉田綾](https://www.nikkei.com/person?election_id=29&candidate_code=026491)
+- [東京新聞 - 再生の道参院選擁立](https://www.tokyo-np.co.jp/article/400743)
