--- a/result/26_京都府/06区/園崎弘道.md
+++ b/result/26_京都府/06区/園崎弘道.md
@@ -3,70 +3,70 @@
 ## 基本情報
 | 項目 | 内容 |
 |------|------|
-| 生年月日 | 1980年3月23日 |
-| 年齢 | 44歳 |
-| 選挙区 | 京都6区（宇治市、城陽市、八幡市等） |
-| 当選回数 | 衆議院なし（新人）、城陽市議2期、京都府議4期 |
-| 主な役職 | 自民党京都6区支部長、元京都府議会議員 |
+| 生年月日 | 1980年3月23日（44歳） |
+| 選挙区 | 京都6区 |
+| 当選回数 | なし（新人・落選） |
+| 主な役職 | 自民党京都府第六選挙区支部長、元京都府議会議員 |
 
 ## 経歴
-- 石川県生まれ
-- 三田学園高等学校（兵庫県）卒業
-- 神戸大学経営学部卒業
-- 大阪市立大学大学院都市経営研究科修了（修士）
-- 京都大学公共政策大学院修了
-- カネボウ化粧品（京都支社）勤務
-- 2007年城陽市議会議員初当選、2期7年
-- 2014年京都府議会議員（城陽市選挙区）、4期10年
-- 京都スポーツ・障がい者スポーツ推進協会理事長
-- 2023年自民党京都6区支部長就任
-- 2024年衆院選で65,152票獲得も落選
+- 城陽市議会議員
+- 京都府議会議員
+- 2024年 京都大学公共政策大学院修了
+- 自民党京都府第六選挙区支部長
+- NPO法人京都スポーツ・障がい者スポーツ推進協会理事長
+- 城陽市空手道連盟会長
+- 消防団員（寺田分団）
+- 城陽青年会議所理事長（2016年）
+- 城陽秋花火2016実行委員長
+- 1993年 全日本オセロ選手権少年少女の部2位
 
 ## 評価サマリー
 
 | 項目 | 評価 |
 |------|------|
-| ① 課題設定能力 | 3/5 |
-| ② 解決設計力 | 3/5 |
+| ① 課題設定能力 | 2/5 |
+| ② 解決設計力 | 4/5 |
 | ③ 実行力 | 2/5 |
-| ④ 説明責任 | 3/5 |
-| ⑤ 一貫性 | 3/5 |
-| ⑥ 倫理観 | 3/5 |
+| ④ 説明責任 | 2/5 |
+| ⑤ 一貫性 | 4/5 |
+| ⑥ 倫理観 | 4/5 |
 
 ## 評価詳細
 
-### ① 課題設定能力: 3/5
-**評価根拠**: 人口減少・少子高齢化、物価高騰、格差と貧困の連鎖、自殺率の高さなど日本社会の閉塞感を課題として認識。ただし独自の問題提起というより一般的な課題認識に留まる。地方議員として17年の経験から地域課題への理解はある。
+### ① 課題設定能力: 2/5
+**評価根拠**: 市議・府議として地方行政の課題を把握しているが、国政での独自の政策課題を打ち出した実績はまだない。
 
-### ② 解決設計力: 3/5
-**評価根拠**: 大阪市立大学院（都市経営）、京都大学公共政策大学院と政策系の学位を複数取得しており、政策設計への理解は高いと思われる。市議・府議として地方行政に関わった経験も持つ。ただし具体的な政策成果は確認できず。
+### ② 解決設計力: 4/5
+**評価根拠**: 京都大学公共政策大学院修了という政策立案の専門教育を受けている。スポーツ・障がい者支援NPOの運営経験も。
 
 ### ③ 実行力: 2/5
-**評価根拠**: 城陽市議2期7年、京都府議4期10年の地方議員経験は評価できる。しかし国政は未経験で、2024年衆院選では山井和則に敗れ落選。京都6区は山井の地盤が強く、自民党として突破できていない。
+**評価根拠**: 衆院選で山井和則に敗北（65,152票で2位）。地元城陽市でも票を伸ばせなかったと報道。
 
-### ④ 説明責任: 3/5
-**評価根拠**: 公式サイトで政策・活動を発信している。特に問題となる説明責任の欠如はないが、詳細な政策説明や実績報告は限定的。
+### ④ 説明責任・コミュニケーション力: 2/5
+**評価根拠**: 国政初挑戦で情報発信は限定的。青年会議所などでの地域活動経験はある。
 
-### ⑤ 一貫性: 3/5
-**評価根拠**: 自民党に一貫して所属し、市議→府議→国政挑戦と政治家としてのキャリアを積み上げている。政党移籍や大きな方針転換はない。
+### ⑤ 一貫性: 4/5
+**評価根拠**: 自民党一筋で地方議員からのキャリアを積んできた。支部長として活動継続。
 
-### ⑥ 倫理観・権力の扱い方: 3/5
-**評価根拠**: 特に問題となるスキャンダルや疑惑はない。17年の地方議員活動でクリーンな政治家像を維持している。
+### ⑥ 倫理観・権力の扱い方: 4/5
+**評価根拠**: スキャンダルや問題行動の報道なし。消防団員、障がい者スポーツ支援など地域貢献活動も評価できる。
 
 ## 強み・弱み
 
 ### 強み
-- **地方議員経験の豊富さ**: 市議・府議計17年の経験、地域への理解が深い
-- **高い学歴**: 神戸大学→大阪市立大学院→京都大学公共政策大学院と政策系の学位
-- **若さと継続性**: 44歳と比較的若く、長期的な活動が期待できる
+- **政策専門教育**: 京大公共政策大学院修了
+- **地方議会経験**: 市議・府議の経験
+- **地域貢献**: NPO理事長、消防団員
+- **若さ**: 44歳で今後の成長余地
+- **自民党支部長**: 組織基盤あり
 
 ### 弱み（注意点）
-- **国政経験なし**: 衆議院議員としての経験・実績がない
-- **選挙での弱さ**: 京都6区では山井和則が圧倒的に強く、2024年選挙でも敗北
-- **知名度不足**: 地方議員としての活動が中心で全国的な知名度は低い
+- **衆院選敗北**: 山井に敗北
+- **地元苦戦**: 城陽市でも票伸びず
+- **国政経験なし**: 政策実現の実績がない
+- **知名度不足**: 全国的な認知度がない
 
 ## 情報ソース
-- [そのさき弘道公式サイト](https://sonosakimirai.com/)
+- [園崎弘道公式サイト](https://sonosakimirai.com/)
 - [日本経済新聞 - 園崎弘道](https://www.nikkei.com/person?election_id=27&candidate_code=010702)
-- [自由民主党 - 園崎弘道紹介](https://www.jimin.jp/news/information/208313.html)
-- [選挙ドットコム - そのさき弘道](https://go2senkyo.com/seijika/51898)
+- [京都新聞 - 京都6区報道](https://www.kyoto-np.co.jp/articles/-/1360321)
