--- a/result/26_京都府/06区/安藤裕.md
+++ b/result/26_京都府/06区/安藤裕.md
@@ -3,23 +3,22 @@
 ## 基本情報
 | 項目 | 内容 |
 |------|------|
-| 生年月日 | 1965年3月28日 |
-| 年齢 | 59歳 |
-| 選挙区 | 京都6区（元職）→参院比例当選 |
-| 当選回数 | 衆議院3回、参議院1回 |
-| 主な役職 | 参政党国会議員団幹事長、元復興大臣政務官 |
+| 生年月日 | 1965年3月28日（59歳） |
+| 選挙区 | 京都6区 |
+| 当選回数 | 衆議院3期（自民党時代）、2024年衆院選落選 |
+| 主な役職 | 元復興大臣政務官、参政党政務調査会長 |
 
 ## 経歴
-- 神奈川県生まれ、京都府宇治市在住
-- 慶應義塾普通部→高校→大学経済学部卒業
-- 相模鉄道株式会社入社
-- 税理士資格取得、安藤裕税理士事務所設立
-- 2012年衆院選で京都6区から自民党公認で初当選（比例復活）
-- 衆議院議員3期（2012〜2021年）
-- 復興大臣政務官（第4次安倍内閣）
-- 「日本の未来を考える勉強会」会長
-- 2024年参政党入党、衆院選（京都6区）落選
-- 2025年参院選（比例）当選
+- 慶應義塾大学経済学部卒業
+- 相模鉄道勤務
+- 税理士資格取得、税理士事務所開業
+- 2012年 自民党から衆院選初当選
+- 2017年 復興大臣政務官兼内閣府大臣政務官
+- 自民党で3期当選（2012年、2014年、2017年）
+- 2021年 衆院選不出馬
+- 新党くにもりを経て参政党に移籍
+- 2024年10月 参政党から衆院選出馬（落選、得票率8.4%で5位最下位）
+- 2025年 参院選比例区当選
 
 ## 評価サマリー
 
@@ -27,46 +26,46 @@
 |------|------|
 | ① 課題設定能力 | 4/5 |
 | ② 解決設計力 | 4/5 |
-| ③ 実行力 | 3/5 |
-| ④ 説明責任 | 4/5 |
-| ⑤ 一貫性 | 2/5 |
-| ⑥ 倫理観 | 3/5 |
+| ③ 実行力 | 2/5 |
+| ④ 説明責任 | 2/5 |
+| ⑤ 一貫性 | 1/5 |
+| ⑥ 倫理観 | 2/5 |
 
 ## 評価詳細
 
 ### ① 課題設定能力: 4/5
-**評価根拠**: 税理士としての専門知識を活かし、「消費税が日本経済停滞の元凶」という明確な課題設定を持つ。積極財政の必要性を「日本の未来を考える勉強会」を設立して提唱するなど、独自の問題提起ができている。
+**評価根拠**: 税理士として財政・税制に精通。消費税廃止を明確に主張。復興政務官として東日本大震災復興にも取り組んだ経験を持つ。
 
 ### ② 解決設計力: 4/5
-**評価根拠**: 消費税廃止・減税と積極財政による経済立て直しという具体的な政策設計を持つ。コロナ禍での100兆円補正予算提言など、数字を伴う提案ができる。税理士としての専門性が政策設計に活かされている。
+**評価根拠**: 慶應経済学部卒、税理士としての専門性。政務官として政策立案に関与した実績がある。
 
-### ③ 実行力: 3/5
-**評価根拠**: 衆議院議員3期、復興大臣政務官として政府内で実務を担当した実績がある。ただし消費税減税・積極財政という持論は自民党内で主流とならず、結果的に離党。2024年衆院選では落選し、影響力は限定的に。
+### ③ 実行力: 2/5
+**評価根拠**: 2024年衆院選で得票率8.4%の5位最下位で惨敗。比例復活要件（得票率10%以上）も満たせず議席を失った。
 
-### ④ 説明責任: 4/5
-**評価根拠**: YouTubeチャンネルやSNSで積極的に政策を発信。消費税の問題点、インボイス制度の欺瞞など専門的な内容を分かりやすく解説。参院当選後も国会質疑で明確に主張を展開している。
+### ④ 説明責任・コミュニケーション力: 2/5
+**評価根拠**: YouTuberとしての発信力はあるが、選挙結果を見る限り有権者への浸透は不十分。
 
-### ⑤ 一貫性: 2/5
-**評価根拠**: 自民党から参政党への移籍は大きな政党変更。積極財政・消費税廃止という政策軸自体は一貫しているが、自民党議員として当選しながら党の方針と異なる主張を続け、最終的に離党・移籍した経緯は一貫性に疑問符。
+### ⑤ 一貫性: 1/5
+**評価根拠**: 自民党→新党くにもり→参政党と政党を渡り歩く。「自民党で日本衰退」と古巣を批判する姿勢は一貫性を欠く。
 
-### ⑥ 倫理観・権力の扱い方: 3/5
-**評価根拠**: 特に問題となるスキャンダルや疑惑はない。衆議院議員3期の活動でクリーンな政治家像を維持している。
+### ⑥ 倫理観・権力の扱い方: 2/5
+**評価根拠**: 政党を渡り歩きながら「日本をたて直す」と主張するが、なぜ自民党時代に変えられなかったのか説明不足。
 
 ## 強み・弱み
 
 ### 強み
-- **専門性**: 税理士としての知識を活かした税制・財政政策への深い理解
-- **発信力**: YouTubeやSNSでの積極的な情報発信、分かりやすい政策説明
-- **国会経験**: 衆議院3期、政務官経験など豊富な政治経験
+- **財政・税制の専門家**: 税理士資格
+- **国会経験**: 衆議院3期、政務官
+- **発信力**: YouTuber活動
+- **参院議員**: 2025年参院選で当選
 
 ### 弱み（注意点）
-- **政党移籍**: 自民党から参政党への移籍は有権者からの信頼に影響
-- **選挙での弱さ**: 京都6区では山井和則に勝てず、2024年も落選
-- **影響力の低下**: 自民党離党後は政策実現の手段が限られる
-- **参政党の位置づけ**: 少数政党からの活動で政策実現は困難
+- **衆院選惨敗**: 得票率8.4%で5位最下位
+- **政党遍歴**: 自民→くにもり→参政党
+- **古巣批判**: 「自民党で日本衰退」発言
+- **一貫性欠如**: なぜ自民党を辞めたか不明確
 
 ## 情報ソース
-- [安藤裕 (政治家) - Wikipedia](https://ja.wikipedia.org/wiki/%E5%AE%89%E8%97%A4%E8%A3%95_(%E6%94%BF%E6%B2%BB%E5%AE%B6))
-- [日本経済新聞 - 安藤裕](https://www.nikkei.com/person?election_id=27&candidate_code=011073)
-- [参議院 - 安藤裕議員情報](https://www.sangiin.go.jp/japanese/joho1/kousei/giin/profile/7025004.htm)
-- [参政党公式 - 安藤裕国会質疑](https://note.com/sanseito_pr/n/n9d030fc9bdf3)
+- [Wikipedia - 安藤裕](https://ja.wikipedia.org/wiki/%E5%AE%89%E8%97%A4%E8%A3%95_(%E6%94%BF%E6%B2%BB%E5%AE%B6))
+- [日本経済新聞 - 安藤裕](https://www.nikkei.com/person?candidate_code=011073&election_id=27)
+- [京都新聞 - 安藤裕出馬報道](https://www.kyoto-np.co.jp/articles/-/1335831)
