--- a/result/26_京都府/06区/山井和則.md
+++ b/result/26_京都府/06区/山井和則.md
@@ -1,72 +1,71 @@
-# 山井和則（中道改革連合）
+# 山井和則（立憲民主党）
 
 ## 基本情報
 | 項目 | 内容 |
 |------|------|
-| 生年月日 | 1962年1月6日 |
-| 年齢 | 62歳 |
-| 選挙区 | 京都6区（宇治市、城陽市、八幡市等） |
-| 当選回数 | 衆議院9回 |
-| 主な役職 | 中道改革連合代表（初代）、元厚生労働大臣政務官 |
+| 生年月日 | 1962年1月6日（62歳） |
+| 選挙区 | 京都6区 |
+| 当選回数 | 衆議院9期 |
+| 主な役職 | ネクスト厚生労働大臣、衆議院予算委員会筆頭理事、党幹事長代理 |
 
 ## 経歴
-- 大阪市生まれ、京都市出身
+- 大阪市生まれ
 - 洛南高等学校卒業
-- 京都大学工学部工業化学科卒業
-- 京都大学大学院工学研究科修士課程修了（工学修士）
-- 松下政経塾入塾（7期生）
-- 1991年〜スウェーデンで福祉・政治を研究
-- 奈良女子大学講師、立命館大学政策科学部大学院講師
-- 2000年衆院選で初当選（比例近畿ブロック）
-- 厚生労働大臣政務官（鳩山・菅内閣）
-- 民主党・民進党国会対策委員長
-- 2026年中道改革連合代表就任
+- 京都大学工学部、同大学院工学研究科修士課程修了
+- 松下政経塾7期生
+- 1991年 スウェーデン留学（福祉政策研究）
+- 1995年 奈良女子大学講師
+- 1997年 立命館大学政策科学部大学院講師
+- 2000年 比例近畿で初当選
+- 2009年 厚生労働大臣政務官（鳩山・菅内閣）
+- 2024年 ネクスト厚生労働大臣就任
+- 2024年10月 9選（97,542票）
 
 ## 評価サマリー
 
 | 項目 | 評価 |
 |------|------|
-| ① 課題設定能力 | 4/5 |
-| ② 解決設計力 | 4/5 |
-| ③ 実行力 | 4/5 |
+| ① 課題設定能力 | 5/5 |
+| ② 解決設計力 | 5/5 |
+| ③ 実行力 | 5/5 |
 | ④ 説明責任 | 4/5 |
 | ⑤ 一貫性 | 4/5 |
-| ⑥ 倫理観 | 3/5 |
+| ⑥ 倫理観 | 5/5 |
 
 ## 評価詳細
 
-### ① 課題設定能力: 4/5
-**評価根拠**: 祖母の介護経験とスウェーデンでの2年間の研究を経て、福祉・介護・高齢者問題を一貫して追及。「2025年問題」など超高齢社会の課題を早くから提起し、認知症対策、介護人材確保など具体的な課題設定ができている。
+### ① 課題設定能力: 5/5
+**評価根拠**: スウェーデン留学で福祉政策を研究し、日本の福祉・年金・労働問題を30年以上追及。予算委員会筆頭理事として政策課題を設定する能力は極めて高い。
 
-### ② 解決設計力: 4/5
-**評価根拠**: スウェーデンの社会保障制度を研究し、日本への適用を提言。介護保険制度や高齢者福祉に関する多数の著作があり、政策的な設計能力が実証されている。ただし野党時代が長く、法案として成立させた実績は限定的。
+### ② 解決設計力: 5/5
+**評価根拠**: 京大大学院工学修士、松下政経塾出身。厚労政務官として制度設計に関与。理系と政策の両方のバックグラウンドで解決策を設計。
 
-### ③ 実行力: 4/5
-**評価根拠**: 9期連続当選は選挙区での強固な支持基盤を示す。2024年選挙では自民・維新・参政党候補を比例復活も許さず完勝。厚労政務官として政府内でも実務を担当。質問主意書を3期目だけで347回提出するなど国会活動も精力的。
+### ③ 実行力: 5/5
+**評価根拠**: 9期連続当選。自民・維新・参政党候補を比例復活も許さず圧勝（97,542票）。2024年には本会議で2時間54分の趣旨弁明で新記録樹立。
 
-### ④ 説明責任: 4/5
-**評価根拠**: 質問主意書の多数提出、国会質疑での徹底追及など、政府への説明責任を求める姿勢が顕著。2024年には2時間54分のフィリバスターを行い記録更新。自身の政策・活動についてもSNS・著作で積極的に発信。
+### ④ 説明責任・コミュニケーション力: 4/5
+**評価根拠**: 予算委員会での質疑で発信力を発揮。英語・スウェーデン語を話す国際性。ただし長時間演説は賛否両論。
 
 ### ⑤ 一貫性: 4/5
-**評価根拠**: 福祉・介護・高齢者政策という軸は30年以上一貫。政党は民主党→民進党→希望の党→立憲民主党→中道改革連合と変遷しているが、いずれも民主党系の流れの中での移動であり、政策的な軸はブレていない。
+**評価根拠**: 民主党→民進党→立憲民主党と変遷したが、福祉・労働政策という軸は30年間一貫。お茶振興議員連盟会長として地元京都にも貢献。
 
-### ⑥ 倫理観・権力の扱い方: 3/5
-**評価根拠**: 特に問題となるスキャンダルや疑惑はない。長年の議員活動でクリーンな政治家像を維持。ただしフィリバスターなどの国会戦術は評価が分かれる。
+### ⑥ 倫理観・権力の扱い方: 5/5
+**評価根拠**: スキャンダルや問題行動の報道なし。「社会の雑巾になれ」という恩師の教えを体現。厚労分野で一貫して弱者支援を続けてきた。
 
 ## 強み・弱み
 
 ### 強み
-- **福祉政策の専門性**: スウェーデン研究、多数の著作など、高齢者福祉・介護政策で日本有数の知見
-- **選挙の強さ**: 9期連続当選、2024年は比例復活も許さない完勝
-- **国会での追及力**: 質問主意書347回、フィリバスター最長記録など徹底した姿勢
+- **福祉政策の専門家**: スウェーデン留学、厚労政務官
+- **選挙の強さ**: 9期連続当選、比例復活許さず
+- **政策立案能力**: 京大大学院工学、松下政経塾
+- **国際経験**: 英語・スウェーデン語
 
 ### 弱み（注意点）
-- **野党歴が長い**: 与党経験は短く、大きな法案を成立させた実績は限定的
-- **政党の変遷**: 民主党系の分裂・再編に伴い所属政党が変わっている
-- **専門の偏り**: 福祉以外の分野（経済・外交等）での存在感は相対的に薄い
+- **野党ベテラン**: 与党経験は民主党政権時のみ
+- **長時間演説**: 賛否が分かれる
+- **党籍変遷**: 政党の離合集散
 
 ## 情報ソース
-- [山井和則 - Wikipedia](https://ja.wikipedia.org/wiki/%E5%B1%B1%E4%BA%95%E5%92%8C%E5%89%87)
+- [Wikipedia - 山井和則](https://ja.wikipedia.org/wiki/%E5%B1%B1%E4%BA%95%E5%92%8C%E5%89%87)
 - [山井和則公式サイト](https://yamanoi.net/)
-- [松下政経塾 - 山井和則プロフィール](https://www.mskj.or.jp/profile/kazunori-yamanoi.html)
-- [国会議員白書 - 山井和則](https://kokkai.sugawarataku.net/giin/r02412.html)
+- [立憲民主党 - 山井和則](https://cdp-japan.jp/member/3007)
