--- a/result/29_奈良県/02区/池田英子.md
+++ b/result/29_奈良県/02区/池田英子.md
@@ -1,16 +1,17 @@
-# 上條亮一（日本共産党）
+# 池田英子（日本共産党）
 
 ## 基本情報
 | 項目 | 内容 |
 |------|------|
-| 生年月日 | 1986年頃（38歳） |
-| 選挙区 | 京都6区 |
+| 生年月日 | 1966年頃（58歳） |
+| 選挙区 | 奈良2区 |
 | 当選回数 | なし（新人・落選） |
 | 主な役職 | 日本共産党公認候補 |
 
 ## 経歴
 - 日本共産党公認候補
-- 2024年10月 衆院選京都6区から出馬（落選）
+- 宮本次郎から候補者交代で出馬
+- 2024年10月 衆院選奈良2区から出馬（落選）
 
 ## 評価サマリー
 
@@ -32,7 +33,7 @@
 **評価根拠**: 情報不足。国政レベルでの政策設計実績は確認できない。
 
 ### ③ 実行力: 1/5
-**評価根拠**: 初挑戦で落選。5候補中の得票順位は下位と推測される。政治家としての実績はまだない。
+**評価根拠**: 初挑戦で落選。高市という強力な現職相手の選挙戦は厳しかった。
 
 ### ④ 説明責任・コミュニケーション力: 1/5
 **評価根拠**: 情報不足。選挙活動や政策発信についての情報がほとんど得られない。
@@ -48,14 +49,13 @@
 ### 強み
 - **クリーンなイメージ**: スキャンダルなし
 - **共産党公認**: 党の支援を受けた活動
-- **若さ**: 38歳で今後の成長余地
 
 ### 弱み（注意点）
 - **情報不足**: 経歴・政策の情報が極めて乏しい
 - **国政経験なし**: 初挑戦で落選
 - **知名度なし**: 全国的な認知度がない
-- **得票力不足**: 厳しい結果
+- **候補者交代**: 宮本次郎から急遽交代
 
 ## 情報ソース
-- [京都新聞 - 京都6区候補者](https://www.kyoto-np.co.jp/articles/-/1350420)
-- [選挙ドットコム - 京都6区](https://shugiin.go2senkyo.com/50/senkyoku/44679/)
+- [奈良新聞 - 池田英子報道](https://www.nara-np.co.jp/news/20241004211211.html)
+- [選挙ドットコム - 奈良2区](https://shugiin.go2senkyo.com/50/senkyoku/44684/)
