--- a/result/26_京都府/06区/中嶋秀樹.md
+++ b/result/26_京都府/06区/中嶋秀樹.md
@@ -3,23 +3,23 @@
 ## 基本情報
 | 項目 | 内容 |
 |------|------|
-| 生年月日 | 1971年5月20日 |
-| 年齢 | 53歳 |
-| 選挙区 | 京都6区（宇治市、城陽市、八幡市等） |
-| 当選回数 | 衆議院1回（繰上当選、現在落選中） |
-| 主な役職 | 日本維新の会京都6区支部長、元衆議院議員 |
+| 生年月日 | 1971年5月20日（53歳） |
+| 選挙区 | 京都6区 |
+| 当選回数 | 衆議院1期（繰上当選、2024年落選） |
+| 主な役職 | 元衆議院議員、八幡市商工会理事 |
 
 ## 経歴
 - 京都府八幡市生まれ
 - 常翔啓光学園中学校・高等学校卒業
 - 大阪国際大学政経学部政経学科卒業
-- 燃料会社経営（代表取締役）
-- 八幡青年会議所理事長、民生児童委員
+- 燃料会社経営
+- 八幡青年会議所理事長
+- 民生児童委員
 - 八幡市商工会理事
-- 2019年京都府議会議員選挙（八幡市選挙区）落選
-- 2021年衆院選（京都6区）落選
-- 2023年10月繰り上げ当選（前川清成辞職に伴う）
-- 2024年衆院選落選
+- 2019年 京都府議選出馬（落選）
+- 2021年 衆院選出馬（落選）
+- 2023年 繰上当選（公選法違反で次点者が資格喪失）
+- 2024年10月 衆院選出馬（落選）
 
 ## 評価サマリー
 
@@ -29,43 +29,44 @@
 | ② 解決設計力 | 2/5 |
 | ③ 実行力 | 2/5 |
 | ④ 説明責任 | 2/5 |
-| ⑤ 一貫性 | 3/5 |
-| ⑥ 倫理観 | 3/5 |
+| ⑤ 一貫性 | 4/5 |
+| ⑥ 倫理観 | 4/5 |
 
 ## 評価詳細
 
 ### ① 課題設定能力: 2/5
-**評価根拠**: 日本維新の会の「維新八策」に沿った政策を掲げるが、独自の課題設定や問題提起は確認できない。地元・八幡市での経営者経験はあるが、それを国政レベルの課題として昇華させた形跡は見られない。
+**評価根拠**: 地元商工会理事、燃料会社経営として地域経済の課題を把握しているが、国政での独自の政策課題提示は限定的。
 
 ### ② 解決設計力: 2/5
-**評価根拠**: 衆議院議員として約1年間在職したが、具体的な政策立案や議員立法の実績は確認できない。繰り上げ当選からの短期間であり、政策設計能力を示す材料が乏しい。
+**評価根拠**: 経営者としての実務経験はあるが、国政レベルでの政策設計実績はまだ限定的。衆議院議員としての活動期間も短い。
 
 ### ③ 実行力: 2/5
-**評価根拠**: 2019年府議選落選、2021年衆院選落選、2024年衆院選落選と選挙での敗北が続く。2023年の繰り上げ当選で1期のみ在職。京都6区では山井和則の壁を突破できていない。実行力を評価する材料が限定的。
+**評価根拠**: 2019年府議選落選、2021年衆院選落選、繰上当選後の2024年衆院選でも落選。選挙で結果を出せていない。
 
-### ④ 説明責任: 2/5
-**評価根拠**: 公式サイトは存在するが、詳細な政策説明や活動報告は限定的。2021年のアンケートでは複数の質問に「選択肢以外の回答」をしており、立場を明確にしない姿勢も見られた。
+### ④ 説明責任・コミュニケーション力: 2/5
+**評価根拠**: 繰上当選という特殊な経緯での当選。短い在任期間で存在感を示すのは難しかった。
 
-### ⑤ 一貫性: 3/5
-**評価根拠**: 日本維新の会一筋で政治活動を継続しており、政党移籍はない。落選を重ねても維新から出馬し続ける姿勢は一貫している。
+### ⑤ 一貫性: 4/5
+**評価根拠**: 維新一筋で2019年から継続して活動。落選しても挑戦を続ける姿勢は一貫している。
 
-### ⑥ 倫理観・権力の扱い方: 3/5
-**評価根拠**: 特に問題となるスキャンダルや疑惑はない。政治家としての実績期間が短く評価材料は限定的だが、現時点で倫理的問題は見られない。
+### ⑥ 倫理観・権力の扱い方: 4/5
+**評価根拠**: スキャンダルや問題行動の報道なし。民生児童委員などの地域福祉活動も評価できる。
 
 ## 強み・弱み
 
 ### 強み
-- **地元経験**: 燃料会社経営、青年会議所理事長など地域での活動基盤
-- **維新の組織力**: 京都でも一定の支持を持つ維新からの支援
+- **経営者経験**: 燃料会社経営
+- **地域活動**: 青年会議所、民生委員
+- **粘り強さ**: 落選してもチャレンジ継続
+- **維新一筋**: 一貫した活動
 
 ### 弱み（注意点）
-- **選挙での連敗**: 府議選・衆院選と落選が続き、繰り上げ当選のみ
-- **実績不足**: 約1年の在職で目立った政策実績がない
-- **選挙区事情**: 山井和則が圧倒的に強い京都6区で苦戦続き
-- **独自性の欠如**: 維新の政策を掲げるのみで独自の存在感が薄い
+- **選挙弱さ**: 繰上以外は全て落選
+- **短い在任**: 衆議院議員としての実績不足
+- **繰上当選**: 正規の選挙で勝ち取った議席ではない
+- **知名度**: 全国的な認知度がない
 
 ## 情報ソース
-- [中嶋秀樹 - Wikipedia](https://ja.wikipedia.org/wiki/%E4%B8%AD%E5%B6%8B%E7%A7%80%E6%A8%B9)
-- [なかじまひでき公式サイト](https://nakajimahideki.com/)
-- [日本維新の会 - 中嶋秀樹](https://o-ishin.jp/member/detail/nakajima_hideki.html)
+- [Wikipedia - 中嶋秀樹](https://ja.wikipedia.org/wiki/%E4%B8%AD%E5%B6%8B%E7%A7%80%E6%A8%B9)
+- [中嶋秀樹公式サイト](https://nakajimahideki.com/)
 - [日本経済新聞 - 中嶋秀樹](https://www.nikkei.com/person?election_id=27&candidate_code=010262)
