--- a/result/11_埼玉県/埼玉県.md
+++ b/result/11_埼玉県/埼玉県.md
@@ -230,16 +230,16 @@
 
 [詳細を見る](https://github.com/estela-works/poliscore2026-/blob/main/result/11_埼玉県/04区/工藤薫.md)
 
-#### 伊勢田みちこ（日本維新の会）
+#### 伊勢田享子（日本維新の会）
 
 <!-- NOTE: 4区 候補者4 画像 -->
-![伊勢田みちこ](04区/伊勢田みちこ_card.png)
+![伊勢田享子](04区/伊勢田享子_card.png)
 
-> **ウサギ**: 「日本維新の会公認として挑戦。党の改革路線を掲げる」
+> **ウサギ**: 「貿易会社・百貨店など民間経験を持つ2児の母。子育て世代の当事者として教育政策に関心」
 
-> **ネコ**: 「経歴・政策の公開情報が極めて乏しい。有権者が判断材料を得られない状況」
+> **ネコ**: 「未当選で実績なし、選挙区を7区→4区に変更。独自の政策や問題提起が見られない」
 
-[詳細を見る](https://github.com/estela-works/poliscore2026-/blob/main/result/11_埼玉県/04区/伊勢田みちこ.md)
+[詳細を見る](https://github.com/estela-works/poliscore2026-/blob/main/result/11_埼玉県/04区/伊勢田享子.md)
 
 ---
 
