--- a/result/35_山口県/03区/伊藤博文.md
+++ b/result/35_山口県/03区/伊藤博文.md
@@ -3,8 +3,8 @@
 ## 基本情報
 | 項目 | 内容 |
 |------|------|
-| 生年月日 | 1969年1月17日（55歳） |
-| 年齢 | 55歳 |
+| 生年月日 | 1969年1月17日（57歳） |
+| 年齢 | 57歳 |
 | 選挙区 | 山口3区 |
 | 当選回数 | 0回（新人） |
 | 主な役職 | 観光関連会社代表社員、日本維新の会山口県総支部代表 |
@@ -17,6 +17,7 @@
 - 観光関連会社代表社員
 - 2023年：福岡県議選に出馬
 - 2024年10月：第50回衆院選で山口3区から出馬、落選（32,259票・19.4%）
+- 2026年1月：第51回衆院選（2026年2月8日投票）への再出馬を表明
 
 ## 評価サマリー
 
