--- a/result/13_東京都/06区/福村康広.md
+++ b/result/13_東京都/06区/福村康広.md
@@ -1,16 +1,16 @@
-# 福村康広（諸派）
+# 福村康広（世界平和党）
 
 ## 基本情報
 | 項目 | 内容 |
 |------|------|
 | 生年月日 | 不明 |
-| 年齢 | 不明 |
+| 年齢 | 69歳 |
 | 選挙区 | 東京都6区 |
 | 当選回数 | 新人 |
-| 主な役職 | 諸派公認候補 |
+| 主な役職 | 世界平和党公認候補 |
 
 ## 経歴
-- 諸派から東京6区に出馬予定
+- 世界平和党から東京6区に出馬
 - 2026年衆院選に挑戦
 
 **注意**: 公開情報が極めて限られており、詳細な経歴は確認できませんでした。
