--- a/result/13_東京都/17区/円より子.md
+++ b/result/13_東京都/17区/円より子.md
@@ -1,9 +1,9 @@
-# 円より子（国民民主党）
+# 円より子（無所属）
 
 ## 基本情報
 | 項目 | 内容 |
 |------|------|
-| 生年月日 | 1947年2月10日（77歳） |
+| 生年月日 | 1947年2月10日（78歳） |
 | 選挙区 | 東京17区（比例復活） |
 | 当選回数 | 参議院3期、衆議院1期 |
 | 主な役職 | 参議院財政金融委員長（女性初）、民主党副代表、民主党東京都連会長 |
