--- a/result/23_愛知県/05区/神田憲次.md
+++ b/result/23_愛知県/05区/神田憲次.md
@@ -1,9 +1,9 @@
-# 神田憲次（自由民主党）
+# 神田憲次（無所属）
 
 ## 基本情報
 | 項目 | 内容 |
 |------|------|
-| 生年月日 | 1963年2月19日（61歳） |
+| 生年月日 | 1963年2月19日（62歳） |
 | 選挙区 | 愛知県5区（名古屋市中村区・中川区・清須市） |
 | 当選回数 | 衆議院4回（現在落選中） |
 | 主な役職 | 元財務副大臣、元内閣府大臣政務官、税理士 |
