--- a/result/27_大阪府/11区/松本直高.md
+++ b/result/27_大阪府/11区/松本直高.md
@@ -3,56 +3,71 @@
 ## 基本情報
 | 項目 | 内容 |
 |------|------|
-| 生年月日 | 不明 |
+| 生年月日 | 1972年6月8日 |
+| 年齢 | 53歳 |
 | 選挙区 | 大阪11区（枚方市、交野市） |
-| 当選回数 | 新人 |
-| 主な役職 | 不明 |
+| 当選回数 | 交野市議3期、大阪府議1期（国政は新人） |
+| 主な役職 | 前交野市議会副議長、自民党交野市支部長、税理士事務所所長 |
 
 ## 経歴
-- 詳細な経歴は公開情報から確認できず
-- 自由民主党第3次公認候補として発表
+- 交野市私部生まれ、交野育ち
+- 大阪府立交野高等学校中退後、大学入学資格検定合格
+- 近畿大学商経学部商学科卒業
+- 大阪学院大学大学院法学研究科修士課程修了
+- 立命館大学大学院経営学研究科博士課程前期課程修了
+- 同志社大学大学院総合政策科学研究科博士課程（後期課程）期間満了退学
+- 税理士・特定行政書士として独立開業（松本直高税理士事務所所長、行政書士法人アクトブレイン代表社員）
+- NPO法人シビルブレイン代表理事（成年後見制度の普及活動）
+- 交野市議会議員に当選（3期）、市議会副議長を歴任
+- 大阪府議会議員（1期）
+- 自民党交野市支部長
 - 2026年：第51回衆議院選挙 大阪11区から自由民主党公認で立候補
 
 ## 評価サマリー
 | 項目 | 評価 |
 |------|------|
-| ① 課題設定能力 | 1/5 |
-| ② 解決設計力 | 1/5 |
-| ③ 実行力 | 1/5 |
-| ④ 説明責任 | 1/5 |
-| ⑤ 一貫性 | 2/5 |
-| ⑥ 倫理観 | 2/5 |
+| ① 課題設定能力 | 3/5 |
+| ② 解決設計力 | 3/5 |
+| ③ 実行力 | 3/5 |
+| ④ 説明責任 | 2/5 |
+| ⑤ 一貫性 | 4/5 |
+| ⑥ 倫理観 | 4/5 |
 
 ## 評価詳細
 
-### ① 課題設定能力: 1/5
-**評価根拠**: 情報不足。公開されている政策や問題提起が確認できない。
+### ① 課題設定能力: 3/5
+**評価根拠**: 地方財政を「キャッシュフロー経営」の観点から捉え直す視点を持ち、行政手続の適法性・効率性を構造的な課題として定義している。同志社大学大学院で総合政策科学を専攻し、成年後見制度の著書も執筆するなど、行政課題を学術的に分析する能力がある。ただし国政レベルでの独自の課題設定はまだ示されていない。
 
-### ② 解決設計力: 1/5
-**評価根拠**: 情報不足。具体的な政策提案や制度設計についての発信が確認できない。
+### ② 解決設計力: 3/5
+**評価根拠**: 税理士・特定行政書士の専門知識を活かし、交野市議として成年後見制度利用促進の中核機関設置、パブリックコメント規則改正、オンライン手続条例制定、制限付一般競争入札制度導入など、制度設計を伴う具体的な施策を実現。財源・運用面を含んだ設計ができている。
 
-### ③ 実行力: 1/5
-**評価根拠**: 政治的な実績は確認できない。議員経験の有無も不明。
+### ③ 実行力: 3/5
+**評価根拠**: 交野市議3期・府議1期で具体的な成果を複数残している。市議会副議長として議会運営にも携わり、企業立地促進制度の創設や郡津5号線の道路整備など、インフラ・制度両面で実行実績がある。国政は未経験だが、地方レベルでは限られた範囲で着実に実行してきた。
 
-### ④ 説明責任: 1/5
-**評価根拠**: 情報不足。メディア露出やインタビュー記事が見当たらず、有権者への説明活動が確認できない。
+### ④ 説明責任: 2/5
+**評価根拠**: 公式サイトやブログで活動報告を行い、プロフィール・政策情報は公開している。著書もある。ただし国政レベルでの情報発信やメディア露出はほぼなく、衆院選に向けた政策ビジョンの説明が不十分。
 
-### ⑤ 一貫性: 2/5
-**評価根拠**: 自由民主党からの立候補であり、党の基本方針に沿った活動をしていると推察される。ただし情報が極めて限られている。
+### ⑤ 一貫性: 4/5
+**評価根拠**: 交野市に生まれ育ち、一貫して地元の行政改革・財政健全化に取り組んできた。「行政手続の適正化」「キャッシュフロー経営」という明確な軸を持ち、税理士・行政書士の専門性をそのまま政治活動に活かす姿勢にブレがない。自民党一筋で党籍移動もなく、8年以上の党内分断問題の解決にも尽力。
 
-### ⑥ 倫理観: 2/5
-**評価根拠**: スキャンダルや問題行動は報じられていない。情報が限られているため、高い評価は困難。
+### ⑥ 倫理観: 4/5
+**評価根拠**: スキャンダル・問題行動の報道なし。税理士・登録政治資金監査人という資金の透明性に関わる資格を保有。NPO法人で成年後見制度（判断能力が不十分な人の権利擁護）の普及活動に取り組んでおり、権力の弱い立場への配慮が行動に表れている。
 
 ## 強み・弱み
 
 ### 強み
-- **党組織の支援**: 自由民主党の組織力を活用できる
+- **専門資格の厚み**: 税理士・特定行政書士・宅建士・FP・政治資金監査人と、行政・財務に関する実務資格を多数保有。「プロの視点から行政をチェックする」という姿勢に裏付けがある
+- **地方議会での具体的実績**: 成年後見中核機関設置、オンライン手続条例、入札制度改革など、制度として形に残る成果を複数残している
+- **学術的バックグラウンド**: 大学院3校で法学・経営学・総合政策科学を修め、成年後見制度の著書も持つ政策研究型の政治家
 
 ### 弱み（注意点）
-- **情報発信の極度の不足**: 経歴や政策主張の公開がほぼなく、有権者が判断材料を得られない
-- **知名度の低さ**: 新人候補として認知度が極めて低い
-- **激戦区**: 大阪11区は維新が強い選挙区
+- **国政での知名度・実績ゼロ**: 地方政治では実績があるが、衆院選は完全な新人。全国レベルの政策ビジョンが示されていない
+- **大阪11区は維新が圧倒的に強い**: 維新の中司宏（元枚方市長）が前職として強固な地盤を持ち、自民党は大阪で苦戦が続く
+- **情報発信の不足**: 衆院選候補者としての政策発信・メディア露出が乏しく、有権者への認知拡大が課題
 
 ## 情報ソース
+- [松本直高 Official Site プロフィール](https://naotaka.info/profile/)
+- [松本直高 Official Site](https://naotaka.info/)
+- [わくわくかたのクラブ（松本直高後援会）プロフィール](http://wakuwaku-katano.business1.gogo.jp/contents23)
 - [時事ドットコム 松本直高立候補者情報](https://www.jiji.com/jc/2026syu?d=22963)
 - [自由民主党 第51回衆議院議員総選挙 公認候補予定者（第三次）](https://www.jimin.jp/news/information/212303.html)
